--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 
 <body>
-
+    <h1>Header</h1>
+    <p>Paragraphe</p>
     <h1>This is heading 1</h1>
     <h2>This is heading 2</h2>
     <h3>This is heading 3</h3>
@@ -14,3 +15,4 @@
 </body>
 
 </html>
+
